--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@ body, html {
 /* The hero image */
 .hero-image {
   /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg).*/
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("image/Background.jpg");
+  background-image: url("image/Background.jpg");
 
   /* Set a specific height */
   height: 50%;
