--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@ body, html {
 /* The hero image */
 .hero-image {
   /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg).*/
-  background-image: url("image/Background.jpg");
+  background-image: url("image/Background.png");
 
   /* Set a specific height */
   height: 50%;
