--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 body, html {
     height: 100%;
-    margin: 1px;
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
     background-color: #00001a;
 }
 
@@ -27,4 +28,5 @@ body, html {
   left: 50%;
   transform: translate(-50%, -50%);
   color: white;
+  background-color: rgba(0,0,0, 0.4);
 }
