--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,18 @@ body, html {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
   }
+
+  .button {
+    background-color: #00001a;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 15px;
+  }
+
   
   * {
     box-sizing: border-box;
