--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,8 @@ body, html {
     border-radius: 2px;
   }
   .button:hover {
-    background-color: rgba(0,0,0, 0.8);
+    background-color: white;
+    color: #00001a;
   }
   
   * {
