--- a/css/style.css
+++ b/css/style.css
@@ -23,15 +23,24 @@
     box-shadow: 0 20px 20px 0 rgba(86, 0, 247, 0.644);
     display: flex;
     flex-direction: column;
+    align-items: center;
+    width: 30%;
+    height: 75%;
     padding: 20px 30px;
     position: relative;
     z-index: 10;
   }
 
+
   .img-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     position: relative;
-    width: 300px;
-    height: 300px;
+    width: 90%;
+    height: 90%;
+    margin-left: 0;
+    margin-right: 0;
   }
   .img-container img{
     border-radius: 50%;
@@ -69,11 +78,13 @@
   }
 
   .navigation {
-    display: flex;
-    align-items: center;
-    justify-content: center;
     z-index: 1;
     padding-top: 30px;
+  }
+
+  .music-info {
+    display: flex;
+    
   }
 
   .progress-container {
@@ -97,15 +108,17 @@
     background-color: #fff;
     border: 0;
     color: #0a0b20;
-    font-size: 20px;
+    font-size: 30px;
     cursor: pointer;
     padding: 10px;
     margin: 0 20px;
+    flex-shrink: 3;
   }
   
   .action-btn.action-btn-big {
     color: #0a0b20;
     font-size: 30px;
+    flex-shrink: 3;
   }
   
   .action-btn:focus {
