--- a/style.css
+++ b/style.css
@@ -9,19 +9,27 @@ html, body {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
-.button {
-    width: 500px;
-    background-color: white;
-    color: black;
-    font-size: 60px;
-    position: absolute;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 50%;
-    left: 0;
-    right: 0;
+.header {
+    padding: 50px;
+}
+
+
+.header a {
+    float: left;
+    font-size: 20px;
+}
+
+.header-right {
+    display: flex;
+    flex-direction: column;
+    float: right;
+    line-height: 10px;
+}
+
+.header-right a {
+    float: right;
     text-align: center;
 }
