--- a/style.css
+++ b/style.css
@@ -1,15 +1,7 @@
 html, body {
     height: 100%;
     margin: 0;
-    
 }
-
-/*.animation {
-    margin: 20px;
-    background-color: #ffffff ;
-    animation: gradient 5s ease infinite;
-}
-*/
 
 
 .container {
@@ -42,7 +34,7 @@ html, body {
 
 .header a {
     float: left;
-    font-size: 20px;
+    font-size: 30px;
 }
 
 .header-right {
@@ -55,4 +47,21 @@ html, body {
 .header-right a {
     float: right;
     text-align: center;
+}
+
+.center {
+    margin-top: 210px;
+    text-align: center;
+    font-size: 75px;
+
+}
+
+.footer {
+    margin-top: 280px;
+    text-align: center;
+    font-size: 20px;
+}
+
+.footer a {
+    padding: 49px;
 }
