--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ html, body {
 
 .container {
     height: 100%;
-    background-image: url('Background.png') ;
+    background-image: url('Backgroundcompress.jpg') ;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -57,7 +57,7 @@ html, body {
 }
 
 .footer {
-    margin-top: 280px;
+    margin-top: 275px;
     text-align: center;
     font-size: 20px;
 }
