--- a/style.css
+++ b/style.css
@@ -75,8 +75,19 @@ html, body {
         -0.025em -.05em 0 rgba(0,255,0,.75),
         0.025em 0.05em 0 rgba(0,0,255,.75);
 
-    animation: glitch 60ms ;
-    animation-delay: 5s;    
+    animation: glitch 60ms;
+    animation-delay: 5s;
+}
+
+.glitch2 {
+    font-size: 5rem;
+    text-shadow:
+        0.05em 0 0 rgba(255,0,0,.75),
+        -0.025em -.05em 0 rgba(0,255,0,.75),
+        0.025em 0.05em 0 rgba(0,0,255,.75);
+
+    animation: glitch 50ms ;
+    animation-delay: 7s;
 }
 
 @keyframes glitch {
