--- a/style.css
+++ b/style.css
@@ -119,3 +119,43 @@ html, body {
         0.5em 0.05em 0 rgba(0,0,255,.75);
     }
 }
+
+@media (max-width: 800px) {
+    .header {
+        display: flex;
+        flex-direction: column;
+        padding: 20px;
+        text-align: center;
+    }
+
+    .header a {
+        text-align: center;
+        font-size: 20px;
+        padding-top: 10px;
+    }
+    
+    .header-right {
+        text-align: center;
+        line-height: 5px;
+        padding-top: 10px;
+    }
+    
+    .center {
+        margin-top: 70px;
+        text-align: center;
+        font-size: 75px;
+    
+    }
+
+    .footer {
+        margin-top: 150px;
+        text-align: center;
+        font-size: 20px;
+    }
+    
+    .footer a {
+        padding: 25px;
+        text-decoration: none;
+        color: black;
+    }
+}
